refactor: adjust user update method
feat: add resend mail function

refactor: improove mail sending speed